# AutoMasker_v3

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
automasker/: __init__.py  cli.py  config.py  detector.py  gui.py  io_utils.py  pipeline.py  refine.py  segmenter.py  server.py
automasker/backends/: __init__.py  gdino_onnx.py  gdino_trt.py  sam2_onnx.py  sam2_trt.py
automasker/mask_lift/: __init__.py  camera_io.py  lift.py  lift_cli.py  lift_gsplat.py  ply_io.py
automasker/pano/: __init__.py  pipeline.py  projection.py
cpp_frontend/: CMakeLists.txt
cpp_frontend/src/: main.cpp
export/: __init__.py  benchmark.py  build_trt.py  gdino_onnx.py  sam2_onnx.py
scripts/: download_checkpoints.py  mask_scene.py
tests/: test_mask_lift.py  test_pano.py  test_smoke.py
